--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
+    <!-- <link rel="stylesheet" href="http://at.alicdn.com/t/font_8d5l8fzk5b87iudi.css"> -->
     <title>edu</title>
   </head>
   <body>
