--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
     <!-- <link rel="stylesheet" href="http://at.alicdn.com/t/font_8d5l8fzk5b87iudi.css"> -->
     <title>edu</title>
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      window.onload=function () {  
+        document.addEventListener('touchstart',function (event) {  
+            if(event.touches.length>1){  
+                event.preventDefault();  
+            }  
+        })  
+        var lastTouchEnd=0;  
+        document.addEventListener('touchend',function (event) {  
+            var now=(new Date()).getTime();  
+            if(now-lastTouchEnd<=300){  
+                event.preventDefault();  
+            }  
+            lastTouchEnd=now;  
+        },false)  
+    }  
+
+    </script>
     <script src="/dist/build.js"></script>
   </body>
 </html>
