--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
-
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
-
+    <!-- 
+        手机调试器插件
+    <script src="node_modules/eruda/eruda.min.js"></script>
+    <script>eruda.init();</script> -->
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_368210_abwbh8xuugtlnmi.css">
-    <!-- <link rel="stylesheet" href="http://at.alicdn.com/t/font_8d5l8fzk5b87iudi.css"> -->
+    
     <title>edu</title>
   </head>
   <body>
